# mai-cg

lab1/: CMakeLists.txt
lab1/src/: main.cpp
lab1/src/application/: InputProcessor.hpp  Timer.hpp
lab1/src/domain/figure/: Figure.hpp  FigureDrawer.hpp  FigureUpdater.hpp
lab1/src/domain/figure/circle/: Circle.hpp  CircleDrawer.hpp  CircleUpdater.hpp
lab1/src/graphic/: ApplicationGLFW.hpp  BresenhamsCircle.hpp  Keys.hpp  WindowGLFW.hpp
lab1/src/graphic/drawer/: BresenhamsCircleDrawer.hpp
lab1/src/graphic/inputprocessor/: CircleRadiusUpdateKeyProcessor.hpp  CommonKeyProcessor.hpp
lab1/src/graphic/updater/: PulseRadiusCircleUpdater.hpp
lab2/src/cpp/: main.cpp
lab2/src/cpp/application/: Application.hpp
lab2/src/cpp/common/: Aliases.hpp
lab2/src/cpp/graphic/: ApplicationGLFW.hpp
lab2/src/cpp/graphic/drawer/: MeshDrawer.hpp
lab2/src/cpp/graphic/exception/: GLFWInitException.hpp  GLFWWindowInitException.hpp
lab2/src/cpp/graphic/inputprocessor/: SpheresMoveKeyProcessor.hpp
lab2/src/cpp/graphic/mesh/: EBO.hpp  Mesh.hpp  VAO.hpp  VBO.hpp
lab2/src/cpp/graphic/mesh/cube/: Cube.hpp
lab2/src/cpp/graphic/mesh/cylinder/: Cylinder.hpp
lab2/src/cpp/graphic/shader/: ShaderProgram.hpp
lab3/: CMakeLists.txt
lab3/src/cpp/: main.cpp
lab3/src/cpp/application/: Application.hpp
lab3/src/cpp/common/: Aliases.hpp  Exception.hpp
lab3/src/cpp/graphic/: ApplicationGLFW.hpp  Keys.hpp  WindowGLFW.hpp
lab3/src/cpp/graphic/drawer/: MeshDrawer.hpp
lab3/src/cpp/graphic/inputprocessor/: SpheresMoveKeyProcessor.hpp
lab3/src/cpp/graphic/mesh/: EBO.hpp  Mesh.hpp  VAO.hpp  VBO.hpp
lab3/src/resource/: vertex_shader.glsl
lab4/src/cpp/: main.cpp
lab5/: CMakeLists.txt
lab5/src/cpp/: main.cpp
tmp/src/cpp/: main.cpp
(+6 files in other folders)
